tests/e2e/negative/assign-rvalue/input.ela
int main() {
    4 = 8;
}
